Fixed z-index of header

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body {
 
 header {
   position: fixed;
+  z-index: 1;
 }
 /* Add a black background color to the top navigation */
 .topnav {
